# zephyr_sdk_glue

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  Kconfig.hpm  README.md  README_zh.md  VERSION  hpm_zephyr_version.h.in  sdk_glue_version.h.in  west.yml  west_gitee.yml
applications/video/capture/: README.rst  prj.conf  sample.yaml
boards/hpmicro/hpm5300evk/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  hpm5300evk.dts  hpm5300evk_defconfig  pre_dt_board.cmake
boards/hpmicro/hpm6300evk/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  hpm6300evk.yaml
boards/hpmicro/hpm6750evk2/: Kconfig  Kconfig.board  Kconfig.defconfig  Kconfig.hpm6750evk2  board.c  board.cmake  board.yml  hpm6750evk2-pinctrl.dtsi  hpm6750evk2.dts  hpm6750evk2.yaml  hpm6750evk2_defconfig
boards/hpmicro/hpm6800evk/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  Kconfig.hpm6800evk  board.c  board.cmake  board.yml  hpm6800evk-pinctrl.dtsi  hpm6800evk.dts  hpm6800evk.yaml  hpm6800evk_defconfig
boards/riscv/hpm5300evk/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  hpm5300evk-pinctrl.dtsi  hpm5300evk.dts  hpm5300evk.yaml  hpm5300evk_defconfig
boards/riscv/hpm530evk/: hpm5300evk-pinctrl.dtsi
boards/riscv/hpm6300evk/: Kconfig.board  Kconfig.defconfig  board.cmake  hpm6300evk-pinctrl.dtsi  hpm6300evk.dts  hpm6300evk.yaml  hpm6300evk_defconfig  pre_dt_board.cmake
boards/riscv/hpm6750evk/: Kconfig.board  Kconfig.defconfig  board.cmake  hpm6750evk-pinctrl.dtsi  hpm6750evk.dts  hpm6750evk2-pinctrl.dtsi  hpm6750evk2.dts  hpm6750evk2.yaml  hpm6750evk2_defconfig  hpm6750evk_defconfig
boards/riscv/hpm6750evk2/: CMakeLists.txt  Kconfig.defconfig  board.cmake  hpm6750evk2-pinctrl.dtsi  hpm6750evk2.dts  hpm6750evk2.yaml  hpm6750evk2_defconfig
boards/riscv/hpm6800evk/: CMakeLists.txt  Kconfig  Kconfig.defconfig  board.c  board.cmake  hpm6800evk-pinctrl.dtsi  hpm6800evk.dts  hpm6800evk_defconfig  pre_dt_board.cmake
boards/shields/shield_case/: Kconfig.shield  shield_case.overlay
cmake/: gen_version_h.cmake  version.cmake
docs/: Makefile  README.md  make.bat
docs/source/en/: conf.py  index.rst
docs/source/swdev/: index.rst
docs/source/zh/: conf.py  index.rst
docs/swdev/debugging/: index.rst
docs/swdev/introduction/: index.rst
docs/swdev/log/: release-notes-1.0.rst
docs/swdev/starting/: index.rst  linux.rst  windows.rst
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig.hpmicro  adc_hpmicro_adc12.c  adc_hpmicro_adc16.c
drivers/can/: CMakeLists.txt  Kconfig.hpmicro  can_hpmicro.c  mcan_hpmicro.c
drivers/clock_control/: CMakeLists.txt  Kconfig.hpmicro  clock_control_hpmicro.c  clock_control_hpmicro_pll.c  clock_control_hpmicro_pllv2.c  clock_control_hpmicro_v2.c
drivers/display/: CMakeLists.txt  Kconfig.hpmicro  display.c  display.h  display_lvds_hpmicro.c  display_mipi_hpmicro.c  display_rgb_hpmicro.c
drivers/dma/: CMakeLists.txt  Kconfig.hpmicro  dma_hpmicro.c  dmav2_hpmicro.c
drivers/ethernet/: CMakeLists.txt  Kconfig.hpmicro  ethernet_hpmicro.c
drivers/gpio/: CMakeLists.txt  Kconfig.hpmicro  gpio_hpmicro.c
drivers/i2c/: CMakeLists.txt  Kconfig.hpmicro  i2c_hpmicro.c
drivers/memc/: CMakeLists.txt  Kconfig.hpmicro  memc_hpmicro_ddr.c  memc_hpmicro_femc.c
drivers/pinctrl/: CMakeLists.txt  Kconfig.hpmicro  pinctrl_hpmicro.c
drivers/pwm/: CMakeLists.txt  Kconfig.hpmicro  pwm_hpmicro.c
drivers/sdhc/: CMakeLists.txt  Kconfig.hpmicro  sdhc_hpmicro.c
drivers/serial/: CMakeLists.txt  Kconfig.hpmicro  uart_hpmicro.c
drivers/spi/: CMakeLists.txt  Kconfig.hpmicro  spi_hpmicro.c
drivers/usb/cherryusb/: CMakeLists.txt  Kconfig.hpmicro  cherryusb_hpmicro.c
drivers/usb/cherryusb/device/: CMakeLists.txt  Kconfig.hpmicro  cherryusb_device_hpmicro.c
drivers/usb/cherryusb/host/: CMakeLists.txt  Kconfig.hpmicro  cherryusb_host.ld  cherryusb_host_hpmicro.c
drivers/usb/udc/: CMakeLists.txt  Kconfig.hpmicro  udc_hpmicro.c
drivers/video/: CMakeLists.txt  Kconfig.hpmicro  camera_hpmicro.c  mipi_csi_hpmicro.c  mipi_csi_hpmicro.h  video_hpmicro.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/adc/: hpmicro,hpm-adc12.yaml  hpmicro,hpm-adc16.yaml
dts/bindings/can/: hpmicro,hpm-can.yaml  hpmicro,hpm-mcan.yaml
dts/bindings/clock/: hpmicro,hpm-clock.yaml  hpmicro,hpm-pll-clock.yaml  hpmicro,hpm-pll.yaml  (+3 more)
modules/: CMakeLists.txt  Kconfig  modules.cmake
modules/hpm_sdk/: CMakeLists.txt  Kconfig
samples/: index_en.rst  index_zh.rst
samples/cherryusb/: index_en.rst  index_zh.rst
samples/cherryusb/device/cdc_acm/cdc_acm_vcom/: CMakeLists.txt  README_en.rst  README_zh.rst  app.overlay  prj.conf  sample.yaml
samples/cherryusb/device/cdc_acm/cdc_acm_vcom/src/: cdc_acm.c  main.c
scripts/: gen_clock_dts_header.py  west-commands.yml
scripts/lib/: sdk_glue_banner.py  sdk_glue_utils.py
scripts/west_commands/: supply.py
snippets/: index_en.rst  index_zh.rst
snippets/blinky/: readme_en.rst  readme_zh.rst  snippet.yml
snippets/blinky_pwm/: readme_en.rst  readme_zh.rst  snippet.yml
snippets/can/: can.conf  readme_en.rst  readme_zh.rst  snippet.yml
snippets/canopennode/: canopennode.conf  readme.txt  readme_en.rst  readme_zh.rst  snippet.yml
snippets/display_dual_lvds/: display.conf  readme_en.rst  readme_zh.rst  snippet.yml
snippets/display_lvds/: readme_en.rst  readme_zh.rst  snippet.yml
snippets/display_mipi/: display.conf  readme_en.rst  readme_zh.rst  snippet.yml
snippets/display_rgb/: display.conf  readme_en.rst  readme_zh.rst  snippet.yml
snippets/ethernet/: ethernet.conf  readme_en.rst  readme_zh.rst  snippet.yml
snippets/i2c_eeprom/: readme_en.rst  readme_zh.rst  snippet.yml
snippets/sdhc/: readme.txt  readme_en.rst  readme_zh.rst  sdhc.conf  snippet.yml
snippets/usb/: index_en.rst  index_zh.rst
snippets/video_dvp/: readme_en.rst  readme_zh.rst  snippet.yml
snippets/video_mipi/: readme_en.rst  readme_zh.rst  snippet.yml
soc/hpmicro/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.yml
soc/riscv/: CMakeLists.txt
zephyr/: module.yml
(+244 files in other folders)
